# lunar

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
examples/cube/: main.um
examples/font_rendering/: main.um
examples/interactive_cube/: main.um
examples/pong/: main.um
examples/sine_wave/: main.um
examples/sound_player/: main.um
examples/triangle/: main.um
scripts/: gfx-dbg.py
umbral/: CMakeLists.txt
umbral/cmake/: embed_blob.cmake
umbral/examples/triangle/: main.um
umbral/source/common/: bin_io.h  c_types.h  error.h  hash.h  interner.h  types.h
umbral/source/compiler/: driver.h  loader.h  main.cc
umbral/source/compiler/codegen/: codegen.h  codegen_ctx.h  func_emit.h  type_lower.h
umbral/source/compiler/driver/: driver.h  loader.h  main.cc
umbral/source/compiler/dsl/include/um/shader/: UmShaderOps.td  shader_compile.h  shader_mlir.h  shader_spirv_emit.h  shader_spirv_lower.h  shader_spirv_serialize.h  um_shader_dialect.h  umrf_emit.h  umsh_emit.h
umbral/source/compiler/dsl/lib/mlir/shader/: shader_compile.cc  shader_mlir.cc  shader_spirv_emit.cc  shader_spirv_lower.cc  shader_spirv_serialize.cc  um_shader_dialect.cc  umrf_emit.cc  umsh_emit.cc
umbral/source/compiler/frontend/: ast.h  intrinsics.inc  keywords.inc  lexer.h  module.h  parser.h
umbral/source/compiler/meta/: mono.h
umbral/source/compiler/sema/: body_check.h  collect.h  ctypes.h  itype.h  lower_types.h  method_table.h  mono.h  resolve.h  sema.h  symbol.h
umbral/source/compiler/shader/: UmShaderOps.td  shader_compile.cc  shader_compile.h  shader_emit.h  shader_mlir.cc  shader_spirv_emit.cc  shader_spirv_lower.cc  shader_spirv_serialize.cc  um_shader_dialect.cc  um_shader_dialect.h  umrf_emit.cc  umsh_emit.cc  umshaders.h
umbral/source/compiler/test/: lit.cfg.py  lit.site.cfg.py.in
umbral/source/compiler/test/basic/: 00.um  00_literals.um  01.um  01_control_flow.um  02.um  02_functions.um  03_structs.um  04_enums.um  05_generics.um  06_arrays.um  07_recursion.um  08_globals.um  09_fn_pointers.um  10_extern.um  11_slices.um  13_intrinsics.um  14_slice_cast.um  15_defaults_shorthand.um  17_list.um  20_for_range.um  26_generic_fn_multi.um  28_tuples.um  29_refs_deref.um  30_cast.um  32_struct_zero_fill.um  34_compound_assign.um  35_import_alias.um  36_nested_loops.um  37_control_flow_runtime.um  38_generic_struct_method.um
umbral/source/compiler/test/intrinsic/: 00_mem.um
umbral/source/compiler/test/io/: 00_println.um
umbral/source/compiler/test/meta/: 00_if.um  01_for_fields.um  02_assert.um  02_assert_fail_range.um
umbral/source/compiler/test/shader/: 00_sprite.um  01_missing_vsout.um  04_wrong_stage_field.um  05_shader_fn.um  07_draw_id.um  08_draw_packet.um  09_frame_read.um  10_vertex_id.um  11_shader_ref.um  12_shader_mutable_var.um  13_shader_out.um
umbral/source/compiler/test/unit/: interner_test.cc  lexer_test.cc  meta_test.cc  parser_test.cc  sema_test.cc
umbral/source/runtime/: asset.c  asset.h  fmt.c  mem.c  rt.cc  window.c  window.h
umbral/source/runtime/asset/: asset.c  asset.h
umbral/source/runtime/audio/: audio.c  audio.h  audio_device.c  audio_dsp.h  audio_internal.h  audio_test_helpers.h  audio_thread.c
umbral/source/runtime/common/: types.h
umbral/source/runtime/font/: font.c  font.h
umbral/source/runtime/gfx/: gfx.h  gfx_draw_packet.h  gfx_handles.h  gfx_refl.h  gfx_resources.h  gfx_upload.h  gfx_vulkan.c  umsh.h  umshader.h
umbral/source/runtime/sys/: fmt.c  log.c  log.h  mem.c  time.c  window.c  window.h
umbral/source/runtime/test/: fmt_test.cc  mem_test.cc  mem_test_stubs.c  window_test.cc  window_test_stubs.c
umbral/source/std/core/: list.um  option.um  optional.um  random.um
umbral/source/std/core/containers/: array.um  list.um
umbral/source/std/math/: types.um
umbral/source/std/sys/: asset.um  audio.um  font.um  gfx.um  input.um  mem.um  time.um  window.um
umbral/source/std/sys/audio/: builder.um  context.um  types.um
umbral/source/std/sys/gfx/: assets.um  draw.um  quad.um  shader.um  text.um  types.um
umbral/source/std/sys/io/: fmt.um
umbral/source/test/lit/: lit.cfg.py
umbral/source/test/lit/basic/: 00_literals.um  01_control_flow.um  02_functions.um  03_structs.um  05_generics.um  10_extern.um  11_slices.um  12_type_alias.um  16_site_id.um  17_list.um  18_array_lit.um  19_anon_struct.um  21_cross_mod_struct_init.um  22_import_collision.um  23_break.um  24_continue.um  25_generic_fn.um  27_type_mismatch_assign.um  27_type_mismatch_binary.um  27_type_mismatch_decl.um  27_type_mismatch_return.um  31_float_arith.um  33_slice_fields.um  39_local_type_error.um  40_cross_mod_global.um  41_vec_mat_ops.um  42_time.um  43_generic_type_alias.um  44_generic_type_mismatch.um  45_unknown_symbol_error.um  46_u64_literals.um  47_audio_api.um  48_bitwise_ops.um  49_const_eval.um  50_typed_lits.um  51_random.um  52_alloc_resize.um  53_unknown_field.um  54_bad_float_suffix.um  55_global_needs_type.um  (+6 more)
umbral/source/test/lit/debug/: 00_compile_unit.um  01_locals.um  02_structs.um  03_no_debug_without_flag.um
umbral/source/test/lit/io/: 00_println.um
umbral/source/test/lit/meta/: 01_for_fields.um  02_assert_fail_val.um  02_assert_ok.um
umbral/source/test/lit/shader/: 00_sprite.um  01_missing_vsout.um  02_read_output.um  03_write_input.um  04_wrong_stage_field.um  05_shader_fn.um  06_cpu_shader_fn.um  07_draw_id.um  08_draw_packet.um  09_frame_read.um  10_vertex_id.um  13_shader_out.um  14_frame_read_vec.um
umbral/source/test/unit/: asset_test.cc  asset_test_miniaudio.c  asset_test_stubs.c  audio_test.cc  audio_test_stubs.c  fmt_test.cc  interner_test.cc  lexer_test.cc  mem_test.cc  mem_test_stubs.c  parser_test.cc  sema_test.cc  shader_mlir_test.cc  shader_pack_test.cc  window_test.cc  window_test_stubs.c
umbral/source/tools/ul/: decode.cc  decode.h  decode_font.cc  main.cc  pack.cc  pack.h  shader_link.cc  shader_link.h  shader_pack.cc  shader_pack.h  spirv_emit.cc  spirv_emit.h  umpack.h  umrf_emit.cc  umrf_emit.h
umbral/source/tools/ul/test/: shader_pack_test.cc  shader_tests.cc
(+1 files in other folders)
